# flask_travel

./: pyproject.toml
src/flask_travel/: __init__.py
src/flask_travel/db/: __init__.py  config.py  mixins.py
src/flask_travel/db/models/: __init__.py  departure.py  films.py
src/flask_travel/routes/: __init__.py  departure.py  film.py
src/flask_travel/templates/: __navbar.html  create_film.html
